@@ -1,31 +1,31 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
+var os = System.getProperty('os.name').toLowerCase(Locale.ROOT)
+var isWindows = os.contains('win')
+var isLinux = os.contains('linux')
+var osName = isWindows ? 'win' : isLinux ? 'linux' : 'mac'
+
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation libs.junit.jupiter
+    // Guava
+    implementation 'com.google.guava:guava:33.3.1-jre'
 
+    // JavaFX
+    implementation "org.openjfx:javafx-controls:21:${osName}"
+    implementation "org.openjfx:javafx-base:21:${osName}"
+    implementation "org.openjfx:javafx-graphics:21:${osName}"
+    implementation "org.openjfx:javafx-fxml:21:${osName}"
+
+    // JUnit Jupiter
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // This dependency is used by the application.
-    implementation libs.guava
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
@@ -33,8 +33,11 @@ java {
 }
 
 application {
-    // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'io.github.software.coursework.App'
+    applicationDefaultJvmArgs = [
+        "--module-path=${configurations.runtimeClasspath.asPath}",
+        "--add-modules=javafx.controls,javafx.fxml"
+    ]
 }
 
 tasks.named('test') {
